# ai-short-drama

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json  vite.config.ts
server/: pyproject.toml
server/app/: __init__.py  config.py  main.py  schemas.py  seed.py  smoke.py
server/app/api/: errors.py  trace.py
server/app/db/: models.py  session.py
server/app/domain/: __init__.py  commands.py  director.py  film_ir.py  narrative_targeting.py  statuses.py
server/app/jobs/: __init__.py  contracts.py  registry.py  worker.py
server/app/services/: assets.py  audio_pipeline.py  brief_assistant.py  character_image_qc.py  character_revisions.py  character_visuals.py  creative_story.py  delivery.py  director_proposals.py  domain_commands.py  events.py  exports.py  film_ir.py  generation_records.py  identity_consistency.py  image_provider.py  jobs.py  (+25 more)
server/migrations/: env.py
server/tests/: conftest.py  test_api.py  test_brief_assistant.py  test_character_visual_personality.py  test_character_visual_prompt_contract.py  test_film_ir.py  test_generation_records.py  test_image_generation.py  test_jobs.py  test_media_staging.py  test_migrations.py  test_project_naming.py  test_project_readiness.py  test_prompt_enhancer.py  test_provider_settings.py  test_relationship_assistant.py  test_relationship_graph_api.py  test_relationship_graphs.py  test_script_rewrites.py  test_status_contracts.py  test_story_rewriter.py  test_storyboards_v2.py  test_text_provider.py  test_uploads.py  test_video_generation.py
(+145 files in other folders)
